--- a/yaf-inmobiliaria-angular/angular.json
+++ b/yaf-inmobiliaria-angular/angular.json
@@ -24,8 +24,13 @@
             ],
             "styles": [
               "src/styles.css"
+              ,"./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
