--- a/yaf-inmobiliaria-angular/package.json
+++ b/yaf-inmobiliaria-angular/package.json
@@ -25,6 +25,7 @@
     "ngx-spinner": "^7.1.4",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^8.11.6",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
