--- a/yaf-inmobiliaria-angular/package.json
+++ b/yaf-inmobiliaria-angular/package.json
@@ -26,6 +26,7 @@
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "wow.js": "^1.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
