--- a/yaf-inmobiliaria-angular/angular.json
+++ b/yaf-inmobiliaria-angular/angular.json
@@ -23,8 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-              ,"./node_modules/bootstrap/dist/css/bootstrap.css"
+              "./node_modules/animate.css/animate.min.css",
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
